--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,24 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="176dp"
-    android:background="@color/av_dark_blue"
+    android:background="@color/gold"
     android:gravity="bottom"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
+
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/musixlogof">
+
+        android:layout_width="138dp"
+        android:layout_height="75dp"
+        android:src="@drawable/bultifylogo">
 
     </ImageView>
+
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="125dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="3dp"
         android:paddingTop="8dp"
-        android:text="Muzix"
+        android:text="Bultify"
         android:textAlignment="center"
-        android:layout_marginLeft="12dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1">
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/black"
+        android:textSize="25dp">
 
     </TextView>
 
