--- a/app/src/main/res/drawable/listsongbg.xml
+++ b/app/src/main/res/drawable/listsongbg.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#000">
+    <solid android:color="#434141">
     </solid>
     <stroke android:width="1dp"
-        android:color="#FF362E"></stroke>
+        android:color="#36AFDF"></stroke>
     <corners android:radius="0dp"></corners>
 
 </shape>
+
