--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,9 +19,11 @@
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/av_red"
             android:id="@+id/toolbar"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:background="@color/gold"
+            android:textColor="@color/black"
+            android:textSize="25dp"
             android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             android:elevation="4dp">
         </androidx.appcompat.widget.Toolbar>
@@ -91,7 +93,7 @@
                 android:padding="10dp"
                 android:scrollHorizontally="true"
                 android:singleLine="true"
-                android:text="Idle..."
+                android:text="Playing Song"
                 android:textColor="#fff"
                 android:textSize="18sp"
                 android:textStyle="bold">
