--- a/app/src/main/res/layout/activity_radio.xml
+++ b/app/src/main/res/layout/activity_radio.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,15 +17,16 @@
         <ImageView
             android:layout_width="250dp"
             android:layout_height="250dp"
-            android:src="@drawable/foorti">
+            android:src="@drawable/njoy">
 
         </ImageView>
+
         <TextView
+            android:id="@+id/txtfm"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
             android:textAlignment="center"
-            android:text="88.0 FM"
             android:textColor="#fff"
             android:textSize="24sp">
 
@@ -39,15 +39,15 @@
         android:gravity="center"
         android:orientation="vertical"
         android:layout_weight="2">
+
         <Button
             android:id="@+id/btnradio"
-            android:layout_width="250dp"
-            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="89dp"
             android:layout_margin="30dp"
-            android:text="Stream"
-            android:textStyle="bold"
-            android:textColor="#fff"
-            android:background="@drawable/trans_btn">
+            android:background="@drawable/ic_play"
+            android:textColor="@color/av_light_blue"
+            android:textStyle="bold">
 
         </Button>
 
