--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,16 +16,36 @@
         android:background="@drawable/mxhbg"
         android:orientation="vertical"
         android:weightSum="10">
+
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:id="@+id/toolbar"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:background="@color/gold"
-            android:textColor="@color/black"
-            android:textSize="25dp"
-            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:elevation="4dp">
+            android:elevation="4dp"
+            android:textSize="30dp">
+
+            <EditText
+                android:id="@+id/SearchBox"
+                android:layout_width="250dp"
+                android:layout_height="match_parent"
+                android:hint="Search Song"
+                android:textColor="#333333"
+                android:maxLines="1"
+                android:inputType="text"
+                android:textColorHint="#333333"
+                android:textSize="24sp">
+
+            </EditText>
+
+            <ImageButton
+                android:id="@+id/SearchBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/transperant"
+                android:src="@android:drawable/ic_menu_search"></ImageButton>
+
+
         </androidx.appcompat.widget.Toolbar>
 
         <LinearLayout
