--- a/app/src/main/res/layout-v21/activity_player.xml
+++ b/app/src/main/res/layout-v21/activity_player.xml
@@ -135,7 +135,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="15dp"
-                android:layout_toEndOf="@+id/btnPlayPlayer"
+                android:layout_toRightOf="@+id/btnPlayPlayer"
                 android:background="@drawable/ic_next">
 
             </Button>
@@ -144,9 +144,9 @@
                 android:id="@+id/btnFForwardPlayer"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginStart="15dp"
+                android:layout_marginLeft="15dp"
                 android:layout_marginTop="20dp"
-                android:layout_toEndOf="@+id/btnNextPlayer"
+                android:layout_toRightOf="@+id/btnNextPlayer"
                 android:background="@drawable/ic_fast_forward">
 
             </Button>
@@ -156,8 +156,8 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="15dp"
-                android:layout_toStartOf="@+id/btnPrevious"
+                android:layout_marginRight="15dp"
+                android:layout_toLeftOf="@+id/btnPrevious"
                 android:background="@drawable/ic_fast_rewind">
 
             </Button>
@@ -167,7 +167,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="15dp"
-                android:layout_toStartOf="@+id/btnPlayPlayer"
+                android:layout_toLeftOf="@+id/btnPlayPlayer"
                 android:background="@drawable/ic_prev">
 
             </Button>
@@ -176,9 +176,9 @@
                 android:id="@+id/btnLoop"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="30dp"
-                android:layout_toEndOf="@+id/btnFForwardPlayer"
+                android:layout_toRightOf="@+id/btnFForwardPlayer"
                 android:background="@drawable/ic_repeat">
 
             </Button>
@@ -188,8 +188,8 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginEnd="10dp"
-                android:layout_toStartOf="@+id/btnFReversePlayer"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@+id/btnFReversePlayer"
                 android:background="@drawable/ic_shuffle">
             </Button>
 
