--- a/app/src/main/res/layout/activity_karakoke.xml
+++ b/app/src/main/res/layout/activity_karakoke.xml
@@ -40,7 +40,7 @@
             android:layout_height="300dp">
 
             <TextView
-                android:id="@+id/txtSongName2"
+                android:id="@+id/txtLyrics"
                 android:layout_width="280dp"
                 android:layout_height="280dp"
                 android:layout_margin="20dp"
@@ -67,10 +67,10 @@
                 android:id="@+id/txtSongStart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toLeftOf="@+id/seekBars"
+                android:layout_toStartOf="@+id/seekBars"
                 android:layout_centerInParent="true"
-                android:layout_alignParentLeft="false"
-                android:layout_marginLeft="20dp"
+                android:layout_alignParentStart="false"
+                android:layout_marginStart="20dp"
                 android:text=""
                 android:textColor="#fff"
                 android:textSize="14sp">
@@ -81,9 +81,9 @@
                 android:id="@+id/txtSongStop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/seekBars"
+                android:layout_toEndOf="@+id/seekBars"
                 android:layout_centerInParent="true"
-                android:layout_alignParentRight="false"
+                android:layout_alignParentEnd="false"
                 android:text=""
                 android:textColor="#fff"
                 android:textSize="14sp">
@@ -116,7 +116,7 @@
             android:padding="5dp">
 
             <Button
-                android:id="@+id/btnPlayPlayer"
+                android:id="@+id/btnPlay"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_centerHorizontal="true"
@@ -125,33 +125,33 @@
             </Button>
 
             <Button
-                android:id="@+id/btnNextPlayer"
+                android:id="@+id/btnNext"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="15dp"
-                android:layout_toRightOf="@+id/btnPlayPlayer"
+                android:layout_toEndOf="@+id/btnPlay"
                 android:background="@drawable/ic_next">
 
             </Button>
 
             <Button
-                android:id="@+id/btnFForwardPlayer"
+                android:id="@+id/btnFForward"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="20dp"
-                android:layout_toRightOf="@+id/btnNextPlayer"
+                android:layout_toEndOf="@+id/btnNext"
                 android:background="@drawable/ic_fast_forward">
 
             </Button>
 
             <Button
-                android:id="@+id/btnFReversePlayer"
+                android:id="@+id/btnFReverse"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginRight="15dp"
-                android:layout_toLeftOf="@+id/btnPrevious"
+                android:layout_marginEnd="15dp"
+                android:layout_toStartOf="@+id/btnPrevious"
                 android:background="@drawable/ic_fast_rewind">
 
             </Button>
@@ -161,7 +161,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="15dp"
-                android:layout_toLeftOf="@+id/btnPlayPlayer"
+                android:layout_toStartOf="@+id/btnPlay"
                 android:background="@drawable/ic_prev">
 
             </Button>
@@ -170,9 +170,9 @@
                 android:id="@+id/btnLoop"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="30dp"
-                android:layout_toRightOf="@+id/btnFForwardPlayer"
+                android:layout_toEndOf="@+id/btnFForward"
                 android:background="@drawable/ic_repeat">
 
             </Button>
@@ -182,8 +182,8 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginRight="10dp"
-                android:layout_toLeftOf="@+id/btnFReversePlayer"
+                android:layout_marginEnd="10dp"
+                android:layout_toStartOf="@+id/btnFReverse"
                 android:background="@drawable/ic_shuffle">
             </Button>
 
