--- a/app/src/main/res/layout/activity_karakoke.xml
+++ b/app/src/main/res/layout/activity_karakoke.xml
@@ -42,19 +42,21 @@
             <TextView
                 android:id="@+id/txtLyrics"
                 android:layout_width="280dp"
-                android:layout_height="280dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:layout_marginBottom="20dp"
-                android:ellipsize="marquee"
+
                 android:marqueeRepeatLimit="marquee_forever"
                 android:padding="10dp"
                 android:scrollHorizontally="true"
-                android:singleLine="true"
-                android:text="Song Name"
+
                 android:textAlignment="center"
                 android:textColor="#fff"
                 android:textSize="22sp"
-                android:textStyle="italic">
+                android:textStyle="italic"
+                android:maxLines="12"
+                android:ellipsize="none"
+                android:singleLine="false">
 
             </TextView>
         </RelativeLayout>
