--- a/app/src/main/res/layout/activity_karakoke.xml
+++ b/app/src/main/res/layout/activity_karakoke.xml
@@ -44,6 +44,7 @@
                 android:layout_width="360dp"
                 android:layout_height="300dp"
 
+                android:gravity="center"
                 android:singleLine="false"
                 android:textAlignment="center"
                 android:textColor="#fff"
